criando pokemons com GPT

--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -7,5 +7,9 @@
 <br>
 
 <div>
+  <%= link_to "Create with AI", new_with_ai_pokemons_path, class: "button" %>
+</div>
+
+<div>
   <%= link_to "Back to pokemons", pokemons_path %>
 </div>
